adding sonar config