@@ -27,7 +27,14 @@
 		<springdoc-openapi-ui.version>1.1.48</springdoc-openapi-ui.version>
 		<commons-io.version>2.7</commons-io.version>
 		<fop.version>2.2</fop.version>
-
+		
+			<!-- Configuration Sonar -->
+		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+        <sonar.language>java</sonar.language>
+        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+		<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
 	</properties>
 
 	<repositories>
